fixed scrollbar issues

--- a/src/assets/styles/cmps/_board-group.scss
+++ b/src/assets/styles/cmps/_board-group.scss
@@ -3,7 +3,7 @@
     position: relative;
     margin: 0 4px;
     // z-index: 0;
-    // max-height: calc(100vh - 90px);
+    max-height: calc(100vh - 120px);
     width: 272px;
     border-radius: 3px;
     background-color: $clr13;
